@@ -2,7 +2,7 @@
 <patterns>
   <pattern name="Letter &quot;O&quot; in a number" enabled="true"/>
   <pattern name="Double apostrophe" enabled="true"/>
-  <pattern name="Space after a dialogue line" enabled="true"/>
+  <pattern name="Space after a dialogue dash" enabled="true"/>
   <pattern name="Space before punctuation marks" enabled="true"/>
   <pattern name="Space after punctuation marks" enabled="true"/>
   <pattern name="Space after an ellipsis" enabled="true"/>
