@@ -46,7 +46,7 @@ Replacement=
 
 [HearingImpairedPattern]
 _Name=Speaker before a colon
-_Description=Replace the name of the speaker before a colon with a dialogue line
+_Description=Replace the name of the speaker before a colon with a dialogue dash
 Pattern=^-?\s*?[^,;:.?!]*?:\s
 Flags=MULTILINE,UNICODE
 Replacement=-\040
